--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
   "name": "mixpanel-react",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2",
-    "typescript": "3.6.3"
-  },
+  "private": false,
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist"
+  ],
+  "dependencies": {},
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run build:style && react-scripts start",
+    "build:style": "tailwind build src/styles/index.css -o src/styles/tailwind.css",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "package": "rimraf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__ --extensions '.ts,.tsx'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +30,30 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/preset-typescript": "^7.6.0",
+    "@testing-library/react": "^9.1.4",
+    "@types/jest": "24.0.18",
+    "@types/mixpanel-browser": "^2.23.1",
+    "@types/node": "12.7.5",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
+    "autoprefixer": "^9.6.1",
+    "mixpanel-browser": "^2.29.1",
+    "postcss-cli": "^6.1.3",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-scripts": "3.1.2",
+    "rimraf": "^3.0.0",
+    "tailwindcss": "^1.1.2",
+    "typescript": "3.6.3"
+  },
+  "peerDependencies": {
+    "mixpanel-browser": "^2.29.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   }
 }
