--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "mixpanel-react",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "dependencies": {},
   "scripts": {
     "start": "npm run build:style && react-scripts start",
+    "build:types": "tsc -p tsconfig.package.json",
     "build:style": "tailwind build src/styles/index.css -o src/styles/tailwind.css",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "package": "rimraf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__ --extensions '.ts,.tsx'"
+    "package": "rimraf dist && npm run build:types && NODE_ENV=production babel --config-file ./babelrc.package.json src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__ --extensions '.ts,.tsx'"
   },
   "eslintConfig": {
     "extends": "react-app"
